# deaddrop

./: CMakeLists.txt  README.md  configure_ble.sh  generate_cert.sh  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
data/: app.js  crypto.js  index.html  style.css
main/: CMakeLists.txt  ble.c  ble.h  constants.h  error.c  error.h  main.c  storage.c  storage.h  web_server.c  web_server.h  wifi_ap.c  wifi_ap.h
main/certs/: cacert.pem  prvtkey.pem
